--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -49,7 +49,7 @@
     "##### Using NRPy+ to Numerically Solve PDEs\n",
     "+ Application: [The Scalar **Wave Equation** in Cartesian Coordinates](Tutorial-ScalarWave.ipynb)\n",
     "    + **Start-to-Finish Example**: [Numerically Solving the Scalar Wave Equation: A Complete C Code](Tutorial-Start_to_Finish-ScalarWave.ipynb)\n",
-    "    + Solving the Wave Equation with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Patrick Nelson*)\n",
+    "    + Solving the Wave Equation with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Patrick Nelson & Terrence Pierre Jacques*)\n",
     "        + [<font color='green'>**IDScalarWaveNRPy**</font>: Initial data for the scalar wave equation](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb) \n",
     "        + [<font color='green'>**WaveToyNRPy**</font>: Solving the scalar wave equation, using the method of lines](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
     "\n",
@@ -110,7 +110,7 @@
     "\n",
     "+ **Start-to-Finish curvilinear BSSN simulation examples**:\n",
     "    + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
-    "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***\n",
+    "    + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb)\n",
     "\n",
     "### PART 5: Numerical Relativity $-$ General Relativistic Hydrodynamics (GRHD), Force-Free Electrodynamics (GRFFE), & Magnetohydrodynamics (GRMHD)\n",
     "\n",
