--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -105,15 +105,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -209,15 +201,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -296,15 +280,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a $ScalarWaveETKdir/WaveToyETK_C_kernels_codegen.py\n",
     "\n",
@@ -410,23 +386,23 @@
       "***************************************\n",
       "Starting parallel C kernel codegen...\n",
       "***************************************\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.018928050994873047 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.01932215690612793 seconds.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.040688276290893555 seconds.Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
+      "Generating symbolic expressions for WaveToy RHSs...Generating symbolic expressions for WaveToy RHSs...\n",
       "\n",
+      "Generating symbolic expressions for WaveToy RHSs...\n",
+      "Generating symbolic expressions for WaveToy RHSs...\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.020549774169921875 seconds.(BENCH) Finished WaveToy RHS symbolic expressions in 0.020544052124023438 seconds.\n",
+      "\n",
+      "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
+      "\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.019306659698486328 seconds.\n",
       "Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02551722526550293 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.11431384086608887 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.16234850883483887 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.23599839210510254 seconds.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.3116321563720703 seconds.\n",
-      "(BENCH) Finished C kernel codegen for WaveToy in 0.8536210060119629 seconds.\n"
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02498793601989746 seconds.\n",
+      "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.03319406509399414 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.06288862228393555 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.09815311431884766 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.13662219047546387 seconds.\n",
+      "(BENCH) Finished C kernel codegen for WaveToy in 0.6206808090209961 seconds.\n"
      ]
     }
    ],
@@ -1562,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
