--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -74,9 +74,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output C function calc_psis() to file WeylScal4NRPy/src/calc_psis.h\n",
+      "Output C function calc_invars() to file WeylScal4NRPy/src/calc_invars.h\n"
+     ]
+    }
+   ],
    "source": [
-    "from outputC import lhrh         # NRPy+: Core C code output module\n",
+    "from outputC import lhrh, outCfunction  # NRPy+: Core C code output module\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
@@ -221,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/src/WeylScal4NRPy.c\n"
+      "Overwriting WeylScal4NRPy/src/WeylScal4NRPy.c\n"
      ]
     }
    ],
@@ -304,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/interface.ccl\n"
+      "Overwriting WeylScal4NRPy/interface.ccl\n"
      ]
     }
    ],
@@ -363,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/param.ccl\n"
+      "Overwriting WeylScal4NRPy/param.ccl\n"
      ]
     }
    ],
@@ -406,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/schedule.ccl\n"
+      "Overwriting WeylScal4NRPy/schedule.ccl\n"
      ]
     }
    ],
@@ -488,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing WeylScal4NRPy/src/make.code.defn\n"
+      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
      ]
     }
    ],
@@ -548,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
