--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Module Status:** <font color=green><b> Validated: </b></font> This code has passed unit tests against the original `GiRaFFE` version.\n",
     "\n",
-    "**Validation Notes:** This demonstrates the validation of [Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux](../Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb).\n",
+    "**Validation Notes:** This demonstrates the validation of [Tutorial-GiRaFFE_NRPy-Stilde-flux](../Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb).\n",
     "\n",
     "It is, in general, good coding practice to unit test functions individually to verify that they produce the expected and intended output. Here, we expect our functions `GRFFE__S_i__flux_in_dir_*.h` to produce identical output to the function `GRFFE__S_i__flux.C` in the original `GiRaFFE`. It should be noted that the two codes handle the parameter `flux_dirn` (the direction in which the code is presently calculating the flux through the cell) differently; in the original `GiRaFFE`, the function `GRFFE__S_i__flux()` expects a parameter `flux_dirn` with value 1, 2, or 3, corresponding to the functions `GRFFE__S_i__flux_in_dir_0()`, `GRFFE__S_i__flux_in_dir_1()`, and `GRFFE__S_i__flux_in_dir_2()`, respectively, in `GiRaFFE_NRPy`.\n",
     "\n",
@@ -111,7 +111,6 @@
     "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
     "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
     "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
-    "gamma_faceUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceUU\",\"sym01\")\n",
     "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
@@ -187,13 +186,9 @@
     "params.Nxx1 = 1;\n",
     "params.Nxx2 = 1;\n",
     "\n",
-    "params.Nxx_plus_2NGHOSTS0 = Nxx0 + 2*NGHOSTS;\n",
-    "params.Nxx_plus_2NGHOSTS1 = Nxx1 + 2*NGHOSTS;\n",
-    "params.Nxx_plus_2NGHOSTS2 = Nxx2 + 2*NGHOSTS;\n",
-    "\n",
-    "params.invdx0 = 1.0;\n",
-    "params.invdx1 = 1.0;\n",
-    "params.invdx2 = 1.0;\n",
+    "params.Nxx_plus_2NGHOSTS0 = params.Nxx0 + 2*NGHOSTS;\n",
+    "params.Nxx_plus_2NGHOSTS1 = params.Nxx1 + 2*NGHOSTS;\n",
+    "params.Nxx_plus_2NGHOSTS2 = params.Nxx2 + 2*NGHOSTS;\n",
     "\n",
     "// Step 0d: Set up space and time coordinates\n",
     "// Step 0d.i: Declare \\Delta x^i=dxx{0,1,2} and invdxx{0,1,2}, as well as xxmin[3] and xxmax[3]:\n",
@@ -203,6 +198,7 @@
     "params.dxx0 = (xxmax[0] - xxmin[0]) / ((REAL)params.Nxx_plus_2NGHOSTS0-1.0);\n",
     "params.dxx1 = (xxmax[1] - xxmin[1]) / ((REAL)params.Nxx_plus_2NGHOSTS1-1.0);\n",
     "params.dxx2 = (xxmax[2] - xxmin[2]) / ((REAL)params.Nxx_plus_2NGHOSTS2-1.0);\n",
+    "\n",
     "//printf(\"dxx0,dxx1,dxx2 = %.5e,%.5e,%.5e\\\\n\",params.dxx0,params.dxx1,params.dxx2);\n",
     "params.invdx0 = 1.0 / params.dxx0;\n",
     "params.invdx1 = 1.0 / params.dxx1;\n",
@@ -308,7 +304,7 @@
     "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
     "\n",
     "// Standard CCTK memory access:\n",
-    "#define CCTK_GFINDEX3D(thing,i,j,k) ( (i) + cctk_lsh[0] * ( (j) + cctk_lsh[1] * (k) ) )\n",
+    "#define CCTK_GFINDEX3D(thing,i,j,k) ( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * (k) ) )\n",
     "\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define ALPHA_FACEGF 0\n",
@@ -319,27 +315,22 @@
     "#define GAMMA_FACEDD11GF 5\n",
     "#define GAMMA_FACEDD12GF 6\n",
     "#define GAMMA_FACEDD22GF 7\n",
-    "#define GAMMA_FACEUU00GF 8\n",
-    "#define GAMMA_FACEUU11GF 9\n",
-    "#define GAMMA_FACEUU22GF 10\n",
-    "#define BETA_FACEU0GF 11\n",
-    "#define BETA_FACEU1GF 12\n",
-    "#define BETA_FACEU2GF 13\n",
-    "#define VALENCIAV_RU0GF 14\n",
-    "#define VALENCIAV_RU1GF 15\n",
-    "#define VALENCIAV_RU2GF 16\n",
-    "#define B_RU0GF 17\n",
-    "#define B_RU1GF 18\n",
-    "#define B_RU2GF 19\n",
-    "#define VALENCIAV_LU0GF 20\n",
-    "#define VALENCIAV_LU1GF 21\n",
-    "#define VALENCIAV_LU2GF 22\n",
-    "#define B_LU0GF 23\n",
-    "#define B_LU1GF 24\n",
-    "#define B_LU2GF 25\n",
-    "#define U4UPPERZERO_LGF 26\n",
-    "#define U4UPPERZERO_RGF 27\n",
-    "#define NUM_AUXEVOL_GFS 28\n",
+    "#define BETA_FACEU0GF 8\n",
+    "#define BETA_FACEU1GF 9\n",
+    "#define BETA_FACEU2GF 10\n",
+    "#define VALENCIAV_RU0GF 11\n",
+    "#define VALENCIAV_RU1GF 12\n",
+    "#define VALENCIAV_RU2GF 13\n",
+    "#define B_RU0GF 14\n",
+    "#define B_RU1GF 15\n",
+    "#define B_RU2GF 16\n",
+    "#define VALENCIAV_LU0GF 17\n",
+    "#define VALENCIAV_LU1GF 18\n",
+    "#define VALENCIAV_LU2GF 19\n",
+    "#define B_LU0GF 20\n",
+    "#define B_LU1GF 21\n",
+    "#define B_LU2GF 22\n",
+    "#define NUM_AUXEVOL_GFS 23\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -366,12 +357,6 @@
     "#include \"inlined_functions.C\"\n",
     "#include \"GRFFE__S_i__flux.C\"\n",
     "\n",
-    "// ETK-style kronecker delta:\n",
-    "const int kronecker_delta[4][3] = { { 0,0,0 },\n",
-    "                                    { 1,0,0 },\n",
-    "                                    { 0,1,0 },\n",
-    "                                    { 0,0,1 } };\n",
-    "\n",
     "int main() {\n",
     "    paramstruct params;\n",
     "#include \"set_Cparameters_default.h\"\n",
@@ -387,6 +372,7 @@
     "    REAL *rhs_gfs  = (REAL *)malloc(sizeof(REAL) * NUM_EVOL_GFS * total_num_gridpoints);\n",
     "\n",
     "    // These are the arrays to which we will write the ETK variables.\n",
+    "    CCTK_REAL dxi[4] = {0,invdx0,invdx1,invdx2}; // Note that we have to match flux_dirn=1:3\n",
     "    CCTK_REAL METRIC_LAP_PSI4[NUMVARS_METRIC_AUX];\n",
     "    CCTK_REAL Ur[MAXNUMVARS];\n",
     "    CCTK_REAL Ul[MAXNUMVARS];\n",
@@ -394,6 +380,17 @@
     "    CCTK_REAL cmax[total_num_gridpoints]; CCTK_REAL cmin[total_num_gridpoints];\n",
     "    CCTK_REAL st_x_flux[total_num_gridpoints]; CCTK_REAL st_y_flux[total_num_gridpoints]; CCTK_REAL st_z_flux[total_num_gridpoints];\n",
     "    CCTK_REAL st_x_rhs[total_num_gridpoints]; CCTK_REAL st_y_rhs[total_num_gridpoints]; CCTK_REAL st_z_rhs[total_num_gridpoints];\n",
+    "\n",
+    "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) {\n",
+    "        for(int gf = 0; gf < NUM_EVOL_GFS; gf++) {\n",
+    "        // Initialize the RHSs to 0:\n",
+    "        rhs_gfs[IDX4S(gf,i0,i1,i2)] = 0;\n",
+    "        }\n",
+    "        st_x_rhs[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] = 0.0;\n",
+    "        st_y_rhs[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] = 0.0;\n",
+    "        st_z_rhs[CCTK_GFINDEX3D(cctkGH,i0,i1,i2)] = 0.0;\n",
+    "    }\n",
+    "\n",
     "\n",
     "    // Note that we use the CCTK-style flux_dirn indexing, and run from 1 to 3. This is for compatibility with\n",
     "    // the old code, since GiRaFFE_NRPy uses this integer for fewer things.\n",
@@ -406,7 +403,7 @@
     "            //srand(seed); // Set the seed\n",
     "            //printf(\"seed for random number generator = %ld; RECORD IF AGREEMENT IS BAD\\n\\n\",seed);\n",
     "            // We take care to make sure the corresponding quantities have the SAME value.\n",
-    "            auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)] = 1.0;//(double)rand()/RAND_MAX;\n",
+    "            auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)] = 1.0;//1.0+(double)rand()/RAND_MAX-0.2-0.1;\n",
     "            const double alpha = auxevol_gfs[IDX4S(ALPHA_FACEGF, i0,i1,i2)];\n",
     "            METRIC_LAP_PSI4[LAPSE] = alpha;\n",
     "            //METRIC_LAP_PSI4[LAPM1] = METRIC_LAP_PSI4[LAPSE]-1;\n",
@@ -435,9 +432,6 @@
     "               const double tmp4 = pow(gammaDD02, 2);\n",
     "               const double tmp5 = gammaDD00*tmp0 - gammaDD00*tmp1 + 2*gammaDD01*tmp2 - gammaDD11*tmp4 - gammaDD22*tmp3;\n",
     "               const double tmp6 = 1.0/tmp5;\n",
-    "               auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0, i1, i2)] = tmp6*(tmp0 - tmp1);\n",
-    "               auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0, i1, i2)] = tmp6*(gammaDD00*gammaDD22 - tmp4);\n",
-    "               auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0, i1, i2)] = tmp6*(gammaDD00*gammaDD11 - tmp3);\n",
     "               auxevol_gfs[IDX4S(GAMMADET_FACEGF, i0, i1, i2)] = tmp5;\n",
     "\n",
     "            auxevol_gfs[IDX4S(GAMMADET_FACEGF, i0,i1,i2)] = tmp5;\n",
@@ -481,13 +475,13 @@
     "            FACEVAL[GUPYY] = ( gtxxL * gtzzL - gtxzL * gtxzL )/gtijdet;\n",
     "            FACEVAL[GUPZZ] = ( gtxxL * gtyyL - gtxyL * gtxyL )/gtijdet;\n",
     "\n",
-    "            auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*2.0-1.0;\n",
+    "            auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*0.2-0.1;\n",
     "            const double betax = auxevol_gfs[IDX4S(BETA_FACEU0GF, i0,i1,i2)];\n",
     "            FACEVAL[SHIFTX] = betax;\n",
-    "            auxevol_gfs[IDX4S(BETA_FACEU1GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*2.0-1.0;\n",
+    "            auxevol_gfs[IDX4S(BETA_FACEU1GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*0.2-0.1;\n",
     "            const double betay = auxevol_gfs[IDX4S(BETA_FACEU1GF, i0,i1,i2)];\n",
     "            FACEVAL[SHIFTY] = betay;\n",
-    "            auxevol_gfs[IDX4S(BETA_FACEU2GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*2.0-1.0;\n",
+    "            auxevol_gfs[IDX4S(BETA_FACEU2GF, i0,i1,i2)] = 0.0;//(double)rand()/RAND_MAX*0.2-0.1;\n",
     "            const double betaz = auxevol_gfs[IDX4S(BETA_FACEU2GF, i0,i1,i2)];\n",
     "            FACEVAL[SHIFTZ] = betaz;\n",
     "\n",
@@ -540,13 +534,19 @@
     "            auxevol_gfs[IDX4S(B_LU2GF, i0,i1,i2)] = 1.485468574153978e+00;//-(ux*Ul[BX_CENTER] + uy*Ul[BY_CENTER])/uz;\n",
     "            Ul[BZ_CENTER] = auxevol_gfs[IDX4S(B_LU2GF, i0,i1,i2)];\n",
     "\n",
+    "            // Compute the fluxes for the ETK version\n",
     "            const int index = CCTK_GFINDEX3D(cctkGH,i0,i1,i2);\n",
     "            GRFFE__S_i__flux(i0,i1,i2,flux_dirn,Ul,Ur,FACEVAL,METRIC_LAP_PSI4,cmax[index],cmin[index],st_x_flux[index],st_y_flux[index],st_z_flux[index]);\n",
+    "            // Compute the fluxes for the NRPy+ version. Note the one-offset between flux_dirn and the function names,\n",
+    "            // since we set flux_dirn for backwards compatibility.\n",
     "        }\n",
+    "        if(flux_dirn==1) calculate_Stilde_flux_D0(&params,auxevol_gfs,rhs_gfs);\n",
+    "        if(flux_dirn==2) calculate_Stilde_flux_D1(&params,auxevol_gfs,rhs_gfs);\n",
+    "        if(flux_dirn==3) calculate_Stilde_flux_D2(&params,auxevol_gfs,rhs_gfs);\n",
     "\n",
-    "        for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++) {\n",
-    "            const int index = CCTK_GFINDEX3D(cctkGH,i,j,k);\n",
-    "            const int indexp1 = CCTK_GFINDEX3D(cctkGH,i+kronecker_delta[flux_dirn][0],j+kronecker_delta[flux_dirn][1],k+kronecker_delta[flux_dirn][2]);\n",
+    "        for(int i0=0;i0<Nxx_plus_2NGHOSTS0-1;i0++) for(int i1=0;i1<Nxx_plus_2NGHOSTS1-1;i1++) for(int i2=0;i2<Nxx_plus_2NGHOSTS2-1;i2++) {\n",
+    "            const int index = CCTK_GFINDEX3D(cctkGH,i0,i1,i2);\n",
+    "            const int indexp1 = CCTK_GFINDEX3D(cctkGH,i0+kronecker_delta[flux_dirn][0],i1+kronecker_delta[flux_dirn][1],i2+kronecker_delta[flux_dirn][2]);\n",
     "\n",
     "            st_x_rhs[index]     += (st_x_flux[index]     - st_x_flux[indexp1]    ) * dxi[flux_dirn];\n",
     "            st_y_rhs[index]     += (st_y_flux[index]     - st_y_flux[indexp1]    ) * dxi[flux_dirn];\n",
@@ -554,32 +554,20 @@
     "        }\n",
     "    }\n",
     "\n",
+    "#define SDA(a,b) 1.0-log10(2.0*fabs(a-b)/(fabs(a)+fabs(b)+1.0e-16))\n",
     "    //printf(\"Valencia 3-velocity (right): %.4e, %.4e, %.4e\\n\",auxevol_gfs[IDX4S(VALENCIAV_RU0GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAV_RU1GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAV_RU2GF, i0,i1,i2)]);\n",
     "    //printf(\"Valencia 3-velocity (left):  %.4e, %.4e, %.4e\\n\\n\",auxevol_gfs[IDX4S(VALENCIAV_LU0GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAV_LU1GF, i0,i1,i2)],auxevol_gfs[IDX4S(VALENCIAV_LU2GF, i0,i1,i2)]);\n",
-    "    // Now, we'll run the NRPy+ and ETK functions, once in each flux_dirn.\n",
     "    // We'll compare the output in-between each\n",
-    "    calculate_Stilde_flux_D0(&params,auxevol_gfs,rhs_gfs);\n",
-    "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)]-st_x_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)]-st_y_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED2GF, i0,i1,i2)]-st_z_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
-    "    //printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\n\",rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)],rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)],auxevol_gfs[IDX4S(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
-    "\n",
-    "    calculate_Stilde_flux_D1(&params,auxevol_gfs,rhs_gfs);\n",
-    "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)]-st_x_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)]-st_y_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED2GF, i0,i1,i2)]-st_z_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
-    "    //printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\n\",rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)],rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)],auxevol_gfs[IDX4S(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
-    "\n",
-    "    calculate_Stilde_flux_D2(&params,auxevol_gfs,rhs_gfs);\n",
-    "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)]-st_x_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)]-st_y_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))),\n",
-    "                                     1.0-log10(2.0*fabs(rhs_gfs[IDX4S(STILDED2GF, i0,i1,i2)]-st_z_flux)/(fabs(rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)])+fabs(st_x_flux))));\n",
-    "    //printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\n\",rhs_gfs[IDX4S(STILDED0GF, i0,i1,i2)],rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)],auxevol_gfs[IDX4S(STILDE_FLUXD2GF, i0,i1,i2)]);\n",
+    "    int i0 = 1, i1 = 1, i2 = 1;\n",
+    "    const int index = CCTK_GFINDEX3D(cctkGH,i0,i1,i2);\n",
+    "    printf(\"SDA: %.1f, %.1f, %.1f\\n\",SDA(rhs_gfs[IDX4S(STILDED0GF,i0,i1,i2)],st_x_flux[index]),\n",
+    "                                     SDA(rhs_gfs[IDX4S(STILDED1GF,i0,i1,i2)],st_y_flux[index]),\n",
+    "                                     SDA(rhs_gfs[IDX4S(STILDED2GF,i0,i1,i2)],st_z_flux[index]));\n",
+    "    printf(\"NRPy+ Results: %.16e, %.16e, %.16e\\n\",rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)],rhs_gfs[IDX4S(STILDED1GF, i0,i1,i2)],rhs_gfs[IDX4S(STILDED2GF, i0,i1,i2)]);\n",
+    "    printf(\"ETK   Results: %.16e, %.16e, %.16e\\n\",st_x_flux[index],st_y_flux[index],st_z_flux[index]);\n",
     "\n",
     "    printf(\"Note that in the case of very high velocities, numerical error will accumulate \\n\");\n",
     "    printf(\"and reduce agreement significantly due to a catastrophic cancellation. \\n\\n\");\n",
-    "\n",
-    "    //printf(\"ETK   Results: %.16e, %.16e, %.16e\\n\\n\",st_x_flux,st_y_flux,st_z_flux);\n",
     "}\n"
    ]
   },
@@ -598,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -611,18 +599,10 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation\\Stilde_flux_unit_test.C -o Validation\\Stilde_flux_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 2.238128185272217 seconds.\n",
+      "(BENCH): Finished executing in 2.0701184272766113 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 2.405137777328491 seconds.\n",
-      "\n",
-      "\n",
-      "Now running...\n",
-      "\n",
       "(EXEC): Executing `cmd /c Validation\\Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.4410252571105957 seconds.\n",
-      "Finished in 0.599034309387207 seconds.\n",
-      "\n",
-      "\n"
+      "(BENCH): Finished executing in 0.2370133399963379 seconds.\n"
      ]
     }
    ],
@@ -632,19 +612,9 @@
     "\n",
     "import time\n",
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
-    "start = time.time()\n",
     "cmd.C_compile(os.path.join(out_dir,\"Stilde_flux_unit_test.C\"), os.path.join(out_dir,\"Stilde_flux_unit_test\"))\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "# os.chdir(out_dir)\n",
-    "print(\"Now running...\\n\")\n",
-    "start = time.time()\n",
-    "# cmd.Execute(os.path.join(\"Stilde_flux_unit_test\"))\n",
-    "cmd.Execute(os.path.join(out_dir,\"Stilde_flux_unit_test\"),file_to_redirect_stdout=os.path.join(out_dir,results_file))\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
-    "# os.chdir(os.path.join(\"../\"))\n"
+    "cmd.Execute(os.path.join(out_dir,\"Stilde_flux_unit_test\"),file_to_redirect_stdout=os.path.join(out_dir,results_file))"
    ]
   },
   {
@@ -666,7 +636,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SDA: 1.2, 1.8, 17.7\n",
+      "SDA: 0.7, 0.7, 0.7\n",
       "\n"
      ]
     }
