--- a/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,11 +215,18 @@
     "    values = {}\n",
     "    # Each variable corresponds to a specific set of input parameters\n",
     "    # -f 20 -M 23 -m 10 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "#    values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01, 'x': 2.129680593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00, 'px': 0.000000000000000e+00, 'py': 2.335390295829903e-01, 'pz': 0.000000000000000e+00, 's1x': 5.290000000000000e+00, 's1y': 1.057982019428585e+01, 's1z': -1.587011986900481e+01, 's2x': 4.000000000000000e+00, 's2y': -4.999932020459767e+00, 's2z': 6.000056648964334e+00, 'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01, 'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'tortoise': 1, 'EMgamma': 5.772156649015329e-01}\n",
+    "    values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01,\n",
+    "              'x': 2.129680593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
+    "              'px': 0.000000000000000e+00, 'py': 2.335390295829903e-01, 'pz': 0.000000000000000e+00,\n",
+    "              's1x': 5.290000000000000e+00, 's1y': 1.057982019428585e+01, 's1z': -1.587011986900481e+01,\n",
+    "              's2x': 4.000000000000000e+00, 's2y': -4.999932020459767e+00, 's2z': 6.000056648964334e+00,\n",
+    "              'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
+    "              'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'tortoise': 1,\n",
+    "              'EMgamma': 5.772156649015329e-01}\n",
     "    # -f 20 -M 23 -m 17 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "    values = {'m1': 2.300000000000000e+01, 'm2': 1.700000000000000e+01, 'eta': 2.443750000000000e-01, 'x': 1.874251805673713e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00, 'px': 0.000000000000000e+00, 'py': 2.515021172346453e-01, 'pz': 6.776263578034403e-21, 's1x': 5.290000000000000e+00, 's1y': 1.058297641042221e+01, 's1z': -1.586801532317281e+01, 's2x': 1.156000000000000e+01, 's2y': -1.445325205734002e+01, 's2z': 1.733728943540473e+01, 'KK': 4.015818741475341e-01, 'k0': -7.637538803933533e-01, 'k1': -6.532593752472639e-01, 'd1v2': -7.535873925781249e+01,'dheffSSv2':2.005903703125000e+01, 'tortoise': 1, 'EMgamma': 5.772156649015329e-01}\n",
+    "#    values = {'m1': 2.300000000000000e+01, 'm2': 1.700000000000000e+01, 'eta': 2.443750000000000e-01, 'x': 1.874251805673713e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00, 'px': 0.000000000000000e+00, 'py': 2.515021172346453e-01, 'pz': 6.776263578034403e-21, 's1x': 5.290000000000000e+00, 's1y': 1.058297641042221e+01, 's1z': -1.586801532317281e+01, 's2x': 1.156000000000000e+01, 's2y': -1.445325205734002e+01, 's2z': 1.733728943540473e+01, 'KK': 4.015818741475341e-01, 'k0': -7.637538803933533e-01, 'k1': -6.532593752472639e-01, 'd1v2': -7.535873925781249e+01,'dheffSSv2':2.005903703125000e+01, 'tortoise': 1, 'EMgamma': 5.772156649015329e-01}\n",
     "    # -f 20 -M 37 -m 7 -X 0.01 -Y 0.5 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "#    values = {'m1': 3.700000000000000e+01, 'm2': 7.000000000000000e+00, 'eta': 1.337809917355372e-01, 'x': 1.756956852666752e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00, 'px': 0.000000000000000e+00, 'py': 2.618958361721053e-01, 'pz': -4.336808689942018e-19, 's1x': 1.369000000000000e+01, 's1y': 6.840216429960809e+02, 's1z': -4.838787878117922e+01, 's2x': 1.960000000000000e+00, 's2y': -2.418418743988513e+00, 's2z': 2.966032835071963e+00, 'KK': 1.005859854813800e+00, 'k0': -1.876366249757123e+00, 'k1': -1.506733527559855e+00, 'd1v2': -8.434924523277951e+01,'dheffSSv2':2.367092569667376e+00, 'tortoise': 1, 'EMgamma': 5.772156649015329e-01}\n",
+    "#    values = {'m1': 3.700000000000000e+01*(1+1e-15), 'm2': 7.000000000000000e+00, 'eta': 1.337809917355372e-01, 'x': 1.756956852666752e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00, 'px': 0.000000000000000e+00, 'py': 2.618958361721053e-01, 'pz': -4.336808689942018e-19, 's1x': 1.369000000000000e+01, 's1y': 6.840216429960809e+02, 's1z': -4.838787878117922e+01, 's2x': 1.960000000000000e+00, 's2y': -2.418418743988513e+00, 's2z': 2.966032835071963e+00, 'KK': 1.005859854813800e+00, 'k0': -1.876366249757123e+00, 'k1': -1.506733527559855e+00, 'd1v2': -8.434924523277951e+01,'dheffSSv2':2.367092569667376e+00, 'tortoise': 1, 'EMgamma': 5.772156649015329e-01}\n",
     "    # Return the input values\n",
     "    return values\n",
     "\n",
@@ -244,16 +251,16 @@
     "# Create array of trusted LALSuite derivative values\n",
     "# Note that position in the array corresponds to the index of the corresponding input values\n",
     "# -f 20 -M 23 -m 10 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "#LALSuite_validated_values = {'d2Hdrdpphi': -9.094362869736959e-04, 'd2Hdr2': 8.112476173606075e-05}\n",
+    "LALSuite_validated_values = {'d2Hdrdpphi': -9.094362869736959e-04, 'd2Hdr2': 8.112476173606075e-05}\n",
     "# -f 20 -M 23 -m 17 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
-    "LALSuite_validated_values = {'d2Hdrdpphi': -1.242455937978697e-03, 'd2Hdr2': 1.147405161494248e-04}\n",
+    "#LALSuite_validated_values = {'d2Hdrdpphi': -1.242455937978697e-03, 'd2Hdr2': 1.147405161494248e-04}\n",
     "# -f 20 -M 37 -m 7 -X 0.01 -Y 0.5 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
     "#LALSuite_validated_values = {'d2Hdrdpphi': -1.450075972561637e-03, 'd2Hdr2': 1.345305858572373e-04}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,16 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new d2Hdr2 = 1.972886475078516e-04\n",
-      "tru d2Hdr2 = 1.147405161494248e-04\n",
-      "relative diff = -7.194331534200671e-01\n"
+      "new d2Hdr2 = 1.306155722882594e-04\n",
+      "tru d2Hdr2 = 8.112476173606075e-05\n",
+      "prt d2Hdr2 = 2.032732431401739e-04\n",
+      "relative diff = -6.100580080988953e-01\n",
+      "prt relv diff = -1.505686781571365e+00\n",
+      "nrpy rel diff = -5.562711212684812e-01\n"
      ]
     }
    ],
@@ -304,14 +314,18 @@
     "             )\n",
     "\n",
     "tru_d2Hdr2 = LALSuite_validated_values['d2Hdr2']\n",
+    "prt_d2Hdr2 = 2.032732431401739e-04\n",
     "print(\"new d2Hdr2 = %.15e\" % new_d2Hdr2)\n",
     "print(\"tru d2Hdr2 = %.15e\" % tru_d2Hdr2)\n",
-    "print(\"relative diff = %.15e\" % ((tru_d2Hdr2-new_d2Hdr2)/tru_d2Hdr2))"
+    "print(\"prt d2Hdr2 = %.15e\" % prt_d2Hdr2)\n",
+    "print(\"relative diff = %.15e\" % ((tru_d2Hdr2-new_d2Hdr2)/tru_d2Hdr2))\n",
+    "print(\"prt relv diff = %.15e\" % ((tru_d2Hdr2-prt_d2Hdr2)/tru_d2Hdr2))\n",
+    "print(\"nrpy rel diff = %.15e\" % ((new_d2Hdr2-prt_d2Hdr2)/new_d2Hdr2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,16 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new d2Hdrdpphi = -3.743444138723875e-04\n",
-      "tru d2Hdrdpphi = -1.242455937978697e-03\n",
-      "relative diff = 6.987060849164649e-01\n"
+      "new d2Hdrdpphi = -3.691657598965461e-04\n",
+      "tru d2Hdrdpphi = -9.094362869736959e-04\n",
+      "relative diff = 5.940718825669382e-01\n",
+      "prt relv diff = -1.099746599083024e-06\n",
+      "nrpy rel diff = -1.463493058993384e+00\n"
      ]
     }
    ],
@@ -348,9 +364,13 @@
     "\n",
     "tru_d2Hdrdpphi = LALSuite_validated_values['d2Hdrdpphi']\n",
     "\n",
+    "prt_d2Hdrdpphi = -9.094372871231596e-04\n",
+    "\n",
     "print(\"new d2Hdrdpphi = %.15e\" % new_d2Hdrdpphi)\n",
     "print(\"tru d2Hdrdpphi = %.15e\" % tru_d2Hdrdpphi)\n",
-    "print(\"relative diff = %.15e\" % ((tru_d2Hdrdpphi-new_d2Hdrdpphi)/tru_d2Hdrdpphi))"
+    "print(\"relative diff = %.15e\" % ((tru_d2Hdrdpphi-new_d2Hdrdpphi)/tru_d2Hdrdpphi))\n",
+    "print(\"prt relv diff = %.15e\" % ((tru_d2Hdrdpphi-prt_d2Hdrdpphi)/tru_d2Hdrdpphi))\n",
+    "print(\"nrpy rel diff = %.15e\" % ((new_d2Hdrdpphi-prt_d2Hdrdpphi)/new_d2Hdrdpphi))"
    ]
   },
   {
